unpackaged/main/default/objects/ET_Maintenance_Rate__c/ET_Maintenance_Rate__c.object-meta.xml
<CustomObject>
    <label>Vehicle Maintenance Rates Master</label>
    <nameField>
        <displayFormat>ET-MTR-{00000}</displayFormat>
        <label>Maintenance Rate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Maintenance Rates Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>