unpackaged/main/default/objects/ET_Maintenance_Rate__c/fields/ET_Coverage_Start_Range_KM__c.field-meta.xml
<CustomField>
    <fullName>ET_Coverage_Start_Range_KM__c</fullName>
    <label>Coverage Start Range (KM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>