unpackaged/main/default/objects/ET_Maintenance_Rate__c/fields/ET_Fixed_Maintenance_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Fixed_Maintenance_Rate__c</fullName>
    <label>Fixed Maintenance Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>