unpackaged/main/default/objects/ET_Maintenance_Rate__c/fields/ET_Purchase_Price_End_Range__c.field-meta.xml
<CustomField>
    <fullName>ET_Purchase_Price_End_Range__c</fullName>
    <label>Purchase Price End Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>