unpackaged/main/default/objects/ET_Maintenance_Rate__c/fields/ET_Variable_Maintenance_Rate_1st_year__c.field-meta.xml
<CustomField>
    <fullName>ET_Variable_Maintenance_Rate_1st_year__c</fullName>
    <label>Variable Maintenance Rate (1st year)</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>