unpackaged/main/default/objects/ET_Maintenance_Rate__c/fields/ET_Variable_Maintenance_Rate_4th_year__c.field-meta.xml
<CustomField>
    <fullName>ET_Variable_Maintenance_Rate_4th_year__c</fullName>
    <label>Variable Maintenance Rate (4th year)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>