unpackaged/main/default/objects/ET_Maintenance_Rate__c/fields/ET_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>