unpackaged/main/default/objects/ET_Maintenance_Rate__c/fields/ET_Vehicle_Specs__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Specs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Specs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>