unpackaged/main/default/objects/ET_Maintenance_Rate__c/fields/ET_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Club Car</fullName>
            </value>
            <value>
                <fullName>Four Wheel</fullName>
            </value>
            <value>
                <fullName>Cooling Unit</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Pick up</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Tanker</fullName>
            </value>
            <value>
                <fullName>Taxi Four Wheel</fullName>
            </value>
            <value>
                <fullName>Taxi Sedan</fullName>
            </value>
            <value>
                <fullName>Taxi SUV</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>HCV</fullName>
                <isActive>false</isActive>
                <label>HCV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>